fix emoji icon color in dark mode

--- a/src/main/inject/css/darkModeFixes.css
+++ b/src/main/inject/css/darkModeFixes.css
@@ -85,8 +85,8 @@ input::placeholder,
 }
 
 #emoji-trigger {
-    fill: #969696;
-    stroke: #969696;
+    fill: #969696!important;
+    stroke: #969696!important;
 }
 
 #emoji-trigger.hovered {
